--- a/public/home/css/site.css
+++ b/public/home/css/site.css
@@ -3,7 +3,7 @@
 ===============================*/
 body {
   background-color: #fff;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   opacity: 0;
@@ -105,8 +105,8 @@ h5 {
   padding: 10px 0;
   z-index: 9999;
   position: absolute;
-  border: 1px solid rgba(26,53,71,0.12);
-  box-shadow: 0 1px 2px rgba(26,53,71,0.1);
+  border: 1px solid rgba(26, 53, 71, 0.12);
+  box-shadow: 0 1px 2px rgba(26, 53, 71, 0.1);
   opacity: 0;
   pointer-events: none;
   -webkit-transform: scale(0.8) translateY(-30%);
@@ -358,6 +358,30 @@ h5 {
   background-size: contain;
   background-repeat: no-repeat;
 }
+.banner {
+  z-index: 9999;
+  margin: 50px 150px;
+}
+.notice {
+  color: #801f00;
+  background-color: #ffd8cc;
+  padding: 6px 16px;
+  border-radius: 4px;
+  font-size: 13px;
+}
+.notice strong {
+  font-weight: 600;
+}
+.notice ul {
+  list-style: initial;
+  margin: initial;
+  padding: 0 0 0 20px;
+}
+.notice li {
+  display: list-item;
+  list-style-type: square;
+  margin-bottom: 10px;
+}
 .text {
   width: 350px;
   position: fixed;
@@ -408,7 +432,11 @@ h5 {
   margin-left: 10px;
 }
 @-webkit-keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     -webkit-transform: translateX(0);
     transform: translateX(0);
   }
@@ -515,7 +543,7 @@ h5 {
   height: 256px;
   padding: 20px;
   position: relative;
-  box-shadow: 0 2px 2px rgba(0,0,0,0.24), 0 0 2px rgba(0,0,0,0.12);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12);
 }
 .app .header .title {
   display: block;
@@ -546,7 +574,7 @@ h5 {
   height: 314px;
 }
 .app .content p {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 16px;
   font-weight: 300;
   line-height: 24px;
@@ -566,7 +594,7 @@ h5 {
 }
 .app .content .field .label {
   color: #eb5424;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 12px;
   font-weight: 400;
   line-height: 16px;
@@ -586,7 +614,7 @@ h5 {
 }
 .app .content .field .tip {
   color: #000;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 12px;
   font-weight: 400;
   line-height: 16px;
@@ -624,7 +652,7 @@ h5 {
 }
 .app .dialog {
   color: #fff;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 12px;
   font-weight: 400;
   line-height: 24px;
@@ -638,7 +666,7 @@ h5 {
   height: 25px;
   line-height: 25px;
   color: #eb5424;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 12px;
   font-weight: 500;
   float: right;
@@ -675,7 +703,7 @@ h5 {
 .app .button-bar a.next {
   line-height: 24px;
   color: #9b9b9b;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 12px;
   font-weight: 500;
   background-image: url("../img/right-arrow.png");
@@ -700,7 +728,7 @@ h5 {
 .app .loading .loading-text {
   text-align: center;
   color: #fff;
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-size: 22px;
   font-weight: 400;
   margin-top: 340px;
