--- a/views/home.html
+++ b/views/home.html
@@ -174,6 +174,26 @@
   <!-- main area -->
 
   <section class='home'>
+          <div class='banner'>
+            <div class='notice'>
+              <p>
+                <strong>Important Notice:</strong> Sharelock.io service is being ended and the site will be shut down August 1st,
+                2021. After this date Sharelock will no longer be available, and you will not be able to retrieve any shared secrets that are stored
+                only in Sharelock.
+              </p>
+              <ul>
+                <li>
+                  If you are creating a new shared secret via Sharelock you should plan to move to other alternatives such as
+                  <a target="_blank" rel="noopener" href="https://1password.com/">1Password</a> and <a target="_blank" rel="noopener" href="https://www.sendsafely.com/">SendSafely</a> immediately. Creation of Sharelock secrets will no longer be available after June 9th, 2021.
+                </li>
+                <li>
+                  If you’re retrieving a secret shared with you via Sharelock, you should store this secret in another secure
+                  location so you do not lose access to it after <strong>August 1st, 2021</strong>.
+                </li>
+              </ul>
+            </div>
+          </div>
+
       <div class='phone p1'>
           <div class='screen'>
               <div class='keyboard'></div>
@@ -465,6 +485,9 @@
       </div>
 
       <div class='laptop'></div>
+
+
+
 
       <div class='text t1'>
         <h2>Securely share data</h2>
