--- a/views/home.html
+++ b/views/home.html
@@ -94,7 +94,7 @@
     style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-  <div class='navbar delayed'>
+  <!-- <div class='navbar delayed'>
     <ul>
       <li class="download-link">
         <a href="#" class="download-link">Download <i></i></a>
@@ -116,7 +116,7 @@
       </li>
     </ul>
 
-  </div>
+  </div> -->
 
   <a href='/' class='logo delayed'>
       <img src='/home/img/logo.svg'>
@@ -174,26 +174,6 @@
   <!-- main area -->
 
   <section class='home'>
-          <div class='banner'>
-            <div class='notice'>
-              <p>
-                <strong>Important Notice:</strong> Sharelock.io service is being ended and the site will be shut down August 1st,
-                2021. After this date Sharelock will no longer be available, and you will not be able to retrieve any shared secrets that are stored
-                only in Sharelock.
-              </p>
-              <ul>
-                <li>
-                  If you are creating a new shared secret via Sharelock you should plan to move to other alternatives such as
-                  <a target="_blank" rel="noopener" href="https://1password.com/">1Password</a> and <a target="_blank" rel="noopener" href="https://www.sendsafely.com/">SendSafely</a> immediately. Creation of Sharelock secrets will no longer be available after June 9th, 2021.
-                </li>
-                <li>
-                  If you’re retrieving a secret shared with you via Sharelock, you should store this secret in another secure
-                  location so you do not lose access to it after <strong>August 1st, 2021</strong>.
-                </li>
-              </ul>
-            </div>
-          </div>
-
       <div class='phone p1'>
           <div class='screen'>
               <div class='keyboard'></div>
@@ -486,19 +466,33 @@
 
       <div class='laptop'></div>
 
-
-
-
       <div class='text t1'>
         <h2>Securely share data</h2>
         <p>
             Sharelock allows you to share data easily and securely. Simply <strong>type a secret</strong> and the e-mail or Twitter handle of the person(s) you want to share it with and an <strong>encrypted link (URL) will be generated</strong>.
         </p>
+          <div class='notice'>
+            <p class='title'>
+              <strong>Important Notice:</strong> Sharelock.io service is <br/> being ended and the site will be shut down <strong>August 1st,
+              2021</strong>. After this date Sharelock will no longer be available, and you will not be able to retrieve any shared
+              secrets that are stored
+              only in Sharelock.
+            </p>
+            <ul>
+              <li>
+                If you are creating a new shared secret via Sharelock you should plan to move to other alternatives such as
+                <a class='notice-link' target="_blank" rel="noopener" href="https://1password.com/">1Password</a> and <a target="_blank"
+                  rel="noopener" class='notice-link' href="https://www.sendsafely.com/">SendSafely</a> immediately. Creation of Sharelock secrets
+                will no longer be available after <strong>June 9th, 2021</strong>.
+              </li>
+              <li>
+                If you’re retrieving a secret shared with you via Sharelock, you should store this secret in another secure
+                location so you do not lose access to it after <strong>August 1st, 2021</strong>.
+              </li>
+            </ul>
+          </div>
 
-        <p class="t1-links">
-          <a href="#" class=" how-it-works">How it works <i class=""></i></a>
           <a href="/new" class="create-sharelock">Create Sharelock <i class=""></i></a>
-        </p>
 
       </div>
       <div class='text t2'>
