--- a/views/home.html
+++ b/views/home.html
@@ -379,8 +379,7 @@
                       <a class='login fb ripple light'><div class='ink'></div>SIGN IN WITH FACEBOOK</a>
                   </div>
 
-              </div>
-
+              </div> -->
               <div class='app browser a2'>
 
                   <!--
@@ -473,7 +472,7 @@
         </p>
           <div class='notice'>
             <p class='title'>
-              <strong>Important Notice:</strong> Sharelock.io service is <br/> being ended and the site will be shut down <strong>August 1st,
+              <strong>Important Notice:</strong> Sharelock.io service is being ended and the site will be shut down <strong>August 1st,
               2021</strong>. After this date Sharelock will no longer be available, and you will not be able to retrieve any shared
               secrets that are stored
               only in Sharelock.
