--- a/public/home/css/site.css
+++ b/public/home/css/site.css
@@ -365,6 +365,7 @@ h5 {
   padding: 6px 16px;
   border-radius: 4px;
   font-size: 13px;
+  margin: 10px 0;
 }
 .notice strong {
   font-weight: 600;
@@ -372,6 +373,7 @@ h5 {
 .notice .title {
   font-size: 14px;
   color: #801f00;
+  display: block;
 }
 .notice ul {
   list-style: initial;
@@ -426,7 +428,7 @@ h5 {
   padding: 9px 14px 10px 20px;
   border-radius: 100px;
   border: 1px solid #eb5424;
-  margin-top: 20px;
+  margin-top: 10px;
   display: inline-block;
   font-weight: bold;
   color: #eb5424;
@@ -936,6 +938,13 @@ h5 {
   background-color: #fff;
 }
 @media (max-width: 950px) {
+  .phone {
+    display: none;
+  }
+  .notice .title {
+    font-size: 13px;
+    line-height: 1.5;
+  }
   .navbar {
     top: 14px;
     right: 14px;
