--- a/views/new.html
+++ b/views/new.html
@@ -3,6 +3,30 @@
 {% block content %}
 <div id="content" class="">
   <div class="data card-panel">
+      <div class='notice'>
+        <p class='title'>
+          <strong>Important Notice:</strong> Sharelock.io service is being ended and the site will be shut down <strong>August
+            1st,
+            2021</strong>. After this date Sharelock will no longer be available, and you will not be able to retrieve any
+          shared
+          secrets that are stored
+          only in Sharelock.
+        </p>
+        <ul>
+          <li>
+            If you are creating a new shared secret via Sharelock you should plan to move to other alternatives such as
+            <a class='notice-link' target="_blank" rel="noopener" href="https://1password.com/">1Password</a> and <a
+              target="_blank" rel="noopener" class='notice-link' href="https://www.sendsafely.com/">SendSafely</a>
+            immediately. Creation of Sharelock secrets
+            will no longer be available after <strong>June 9th, 2021</strong>.
+          </li>
+          <li>
+            If you’re retrieving a secret shared with you via Sharelock, you should store this secret in another secure
+            location so you do not lose access to it after <strong>August 1st, 2021</strong>.
+          </li>
+        </ul>
+      </div>
+
       <h5 class="create-sharelock">Create Sharelock</h5>
 
      <div class="input-field">
