--- a/views/data.html
+++ b/views/data.html
@@ -37,7 +37,7 @@
     </div>
     <p class="text secret-data">{{data}}</p>
 
-    <a id="copy" data-clipboard-text="{{data}}" class="action-link action-link-inverted place-top desktop-only" href="javascript:;"><span class="copy_text">Copy to clipboard</span> <span class="circle-ico"><img src="/images/ico_scale.svg" alt=""></span></a>
+    <a id="copy" data-clipboard-text="{{data}}" class="action-link action-link-inverted place-top desktop-only move-down" href="javascript:;"><span class="copy_text">Copy to clipboard</span> <span class="circle-ico"><img src="/images/ico_scale.svg" alt=""></span></a>
 
 
 
